--- a/pom.xml
+++ b/pom.xml
@@ -124,8 +124,8 @@
                 <artifactId>tomcat7-maven-plugin</artifactId>
                 <version>2.2</version>
                 <configuration>
-                    <url>http://localhost:30000/tyj</url>
-                    <path>/tyj</path>
+                    <url>http://localhost:30000</url>
+                    <path>/</path>
                     <uriEncoding>UTF-8</uriEncoding>
                     <port>30000</port>
                 </configuration>
