--- a/.gitignore
+++ b/.gitignore
@@ -32,3 +32,7 @@ hs_err_pid*.log
 
 # apidoc generate doc
 web/apidoc/doc/*
+
+# static index.html
+web/src/main/webapp/static/*
+web/src/main/webapp/index.html
