--- a/web/pom.xml
+++ b/web/pom.xml
@@ -20,7 +20,7 @@
     </properties>
 
     <build>
-        <finalName>tyj</finalName>
+        <finalName>ROOT</finalName>
         <defaultGoal>compile</defaultGoal>
         <resources>
             <resource>
